feat: integrate web platform backend and 2.0 compatibility